Add FilingType / FilingCode to TylerCodesParser
Requires a rework of how we read filing codes.